Be more careful about preserving errno. Might conceivably be related to PR 51432.